--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,14 @@ jobs:
       - name: Push Docker image to Docker Hub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/flask-app
 
-      - name: SSH into EC2 and deploy Docker container
+      - name: SSH into EC2 Instance and Deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          port: ${{ secrets.EC2_SSH_PORT }}
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
             docker pull hema1001/flask-app
+            docker flask-app || true
+            docker rm flask-app || true
             docker run -d -p 5000:5000 hema1001/flask-app
