--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: ubuntu-latest
+    
+    services:
+      docker:
+        image: docker:20.10.7
+        options: --privileged
 
     steps:
       - name: Checkout code
@@ -30,6 +36,6 @@ jobs:
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
             docker pull hema1001/flask-app
-            docker flask-app || true
+            docker stop flask-app || true
             docker rm flask-app || true
             docker run -d -p 5000:5000 hema1001/flask-app
