--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Publish Docker image to Docker Hub
+name: Deploy to EC2 python app
 
 on:
   push:
@@ -6,27 +6,21 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    container: ubuntu-latest
-    
-    services:
-      docker:
-        image: docker:20.10.7
-        options: --privileged
 
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/flask-app .
+      - name: Build Docker Image
+        run: docker build -t hema1001/pythonapp:latest .
 
-      - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/flask-app
+      - name: Push Docker Image
+        run: docker push hema1001/pythonapp:latest
 
       - name: SSH into EC2 Instance and Deploy
         uses: appleboy/ssh-action@master
@@ -35,7 +29,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            docker pull hema1001/flask-app
-            docker stop flask-app || true
-            docker rm flask-app || true
-            docker run -d -p 5000:5000 hema1001/flask-app
+            docker pull hema1001/pythonapp:latest
+            docker stop pythonapp || true
+            docker rm pythonapp || true
+            docker run -d --name pythonapp -p 5000:5000 hema1001/pythonapp:latest
